Canada 150: Fixed page jumping after clicking on "View project". Reversed moments order.

--- a/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/projects.scss
+++ b/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/projects.scss
@@ -86,7 +86,7 @@
 
 		.indicator .minus {
 			opacity: 0;
-			left: 4px;
+			left: 2px;
 		}
 
 		.indicator > span {
